[ADD] - Video 46 hoàn thiện header và chưa add đa ngôn ngữ

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,4 +1,7 @@
 {
+    "home-header":{
+        "speciality":"Medical speciality"
+    },
     "common": {
         "add": "Add",
         "edit": "Edit",
